Added python3 to command

--- a/orc8r/cloud/docker/proxy/supervisord.conf
+++ b/orc8r/cloud/docker/proxy/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:open]
-command=/usr/bin/envdir /var/opt/magma/envdir /usr/local/bin/run_nghttpx.py open
+command=/usr/bin/envdir /var/opt/magma/envdir python3 /usr/local/bin/run_nghttpx.py open
 stdout_logfile=/dev/fd/1
 stderr_logfile=/dev/fd/2
 stdout_logfile_maxbytes=0
@@ -10,7 +10,7 @@ stderr_logfile_maxbytes=0
 autorestart=true
 
 [program:clientcert]
-command=/usr/bin/envdir /var/opt/magma/envdir /usr/local/bin/run_nghttpx.py clientcert
+command=/usr/bin/envdir /var/opt/magma/envdir python3 /usr/local/bin/run_nghttpx.py clientcert
 stdout_logfile=/dev/fd/1
 stderr_logfile=/dev/fd/2
 stdout_logfile_maxbytes=0
