Update container-pipeline.yml for Azure Pipelines

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -285,6 +285,12 @@ stages:
             #     scriptSource: 'filePath'
             #     scriptPath: 'orc8r/cloud/deploy/terraform/orc8r-helm-aws/scripts/create_orc8r_secrets.py'
             #     arguments: 'orc8r-secrets us-west-2 /orc8r/cloud/helm/orc8r/charts/secrets/certs'
+            - task: AzureKeyVault@1
+              inputs:
+                azureSubscription: 'sonar-prod-magma'
+                KeyVaultName: 'sonar-prod-magma-01'
+                SecretsFilter: '*'
+                RunAsPreJob: true
             - task: HelmDeploy@0
               inputs:
                 connectionType: 'Kubernetes Service Connection'
