--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -205,7 +205,7 @@ stages:
                 helmVersionToInstall: '3.2.4'
             - task: KubectlInstaller@0
               inputs:
-                kubectlVersion: 'latest'
+                kubectlVersion: 'latest'            
             # - task: Kubernetes@1
             #   inputs:
             #     connectionType: 'Azure Resource Manager'
@@ -291,10 +291,17 @@ stages:
                 KeyVaultName: 'sonar-prod-magma-01'
                 SecretsFilter: '*'
                 RunAsPreJob: true
+            - task: AzureCLI@2
+              inputs:
+                azureSubscription: 'sonar-prod-magma'
+                scriptType: 'ps'
+                scriptLocation: 'inlineScript'
+                inlineScript: 'az keyvault secret download -f cert.pfx --vault-name sonar-prod-magma-01 --id https://sonar-prod-magma-01.vault.azure.net/secrets/sonarlte-com/dabfd633beb74baea2dfefcd57a806cc --encoding base64'
+                failOnStandardError: true
             - task: CmdLine@2
               inputs:
                 script: |
-                  echo $(SSLKeyPassword)
+                  openssl pkcs12 -export -inkey mykey.key -in developer_identity.pem -out iphone_dev.p12 -password pass:YourPassword
                 failOnStderr: true
             # - task: HelmDeploy@0
             #   inputs:
