--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -298,11 +298,11 @@ stages:
                 scriptLocation: 'inlineScript'
                 inlineScript: 'az keyvault secret download -f cert.pfx --vault-name sonar-prod-magma-01 --id https://sonar-prod-magma-01.vault.azure.net/secrets/sonarlte-com/dabfd633beb74baea2dfefcd57a806cc --encoding base64'
                 failOnStandardError: true
-            - task: CmdLine@2
-              inputs:
-                script: |
-                  openssl pkcs12 -export -inkey mykey.key -in developer_identity.pem -out iphone_dev.p12 -password pass:YourPassword
-                failOnStderr: true
+            # - task: CmdLine@2
+            #   inputs:
+            #     script: |
+            #       openssl pkcs12 -export -inkey mykey.key -in developer_identity.pem -out iphone_dev.p12 -password pass:YourPassword
+            #     failOnStderr: true
             # - task: HelmDeploy@0
             #   inputs:
             #     connectionType: 'Kubernetes Service Connection'
