--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -295,8 +295,8 @@ stages:
               inputs:
                 azureSubscription: 'sonar-prod-magma'
                 scriptType: 'ps'
-                scriptLocation: 'inlineScript'
-                inlineScript: 'az keyvault secret download -f cert.pfx --vault-name sonar-prod-magma-01 --id https://sonar-prod-magma-01.vault.azure.net/secrets/sonarlte-com/dabfd633beb74baea2dfefcd57a806cc --encoding base64'
+                scriptLocation: 'scriptPath'
+                scriptPath: 'orc8r/cloud/deploy/azure/get-cert.ps1'
                 failOnStandardError: true
             # - task: CmdLine@2
             #   inputs:
