--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -298,6 +298,11 @@ stages:
                 scriptLocation: 'scriptPath'
                 scriptPath: 'orc8r/cloud/deploy/azure/get-cert.sh'
                 failOnStandardError: true
+            - task: CmdLine@2
+              inputs:
+                script: |
+                  cat downloaded-file2.txt
+                failOnStderr: true
             # - task: CmdLine@2
             #   inputs:
             #     script: |
