Update container-pipeline.yml for Azure Pipelines

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -303,6 +303,7 @@ stages:
               inputs:
                 script: |
                   cd orc8r/cloud/helm/orc8r/charts/secrets/certs
+                  bash ../../../../../deploy/scripts/create_application_certs.sh sonarlte.com
                   ls -lh
                 failOnStderr: true
             # - task: CmdLine@2
