--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -303,7 +303,8 @@ stages:
               inputs:
                 script: |
                   cd orc8r/cloud/helm/orc8r/charts/secrets/certs
-                  dos2unix ../../../../../deploy/scripts/create_application_certs.sh sonarlte.com
+                  apt-get install dos2unix
+                  dos2unix ../../../../../deploy/scripts/create_application_certs.sh
                   bash ../../../../../deploy/scripts/create_application_certs.sh sonarlte.com
                   ls -lh
                 failOnStderr: true
