Update container-pipeline.yml for Azure Pipelines

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -304,7 +304,7 @@ stages:
                 script: |
                   cd orc8r/cloud/helm/orc8r/charts/secrets/certs
                   sudo apt-get install dos2unix
-                  dos2unix ../../../../../deploy/scripts/create_application_certs.sh
+                  sudo dos2unix ../../../../../deploy/scripts/create_application_certs.sh
                   bash ../../../../../deploy/scripts/create_application_certs.sh sonarlte.com
                   ls -lh
                 failOnStderr: true
