--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -297,7 +297,7 @@ stages:
                 scriptType: 'bash'
                 scriptLocation: 'scriptPath'
                 scriptPath: 'orc8r/cloud/deploy/azure/scripts/fetch_certs.sh'
-                arguments: '$(SSLKeyPassword) https://sonar-prod-magma-01.vault.azure.net/secrets/sonarlte-com/dabfd633beb74baea2dfefcd57a806cc sonar-prod-magma-01'
+                arguments: '$(SSLKeyPassword) sonar-prod-magma-01'
                 failOnStandardError: true
             # - task: CmdLine@2
             #   inputs:
