update secrets location

--- a/orc8r/cloud/helm/orc8r/charts/secrets/values.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/secrets/values.yaml
@@ -11,11 +11,11 @@ create: true
 # orc8r secret configuration
 secret:
   # base directory holding cert secrets
-  certs: .secrets/certs
+  certs: secrets/certs
   # base directory holding config secrets.
-  configs: .secrets/configs
+  configs: secrets/configs
   # base directory holding envdir secrets.
-  envdir: .secrets/envdir
+  envdir: secrets/envdir
 
 # private docker registry credentials
 docker:
